testdata/baselines/reference/compiler/quantifiedTypesSelfTypesStateMachine.errors.txt
quantifiedTypesSelfTypesStateMachine.ts(35,5): error TS2820: Type '"reddd"' is not assignable to type '"green" | "off" | "red" | "yellow"'. Did you mean '"red"'?


==== quantifiedTypesSelfTypesStateMachine.ts (1 errors) ====
    type ParseStateMachine<Self> = { [S in keyof Self]: { [E in keyof Self[S]]: keyof Self } }
    type StateMachine = <Self extends ParseStateMachine<Self>> Self
    
    let trafficLights: StateMachine = {
      off: {
        ON: "red"
      },
      red: {
        TICK: "yellow",
        OFF: "off"
      },
      yellow: {
        TICK: "green",
        OFF: "off"
      },
      green: {
        TICK: "red",
        OFF: "off"
      }
    }
    
    let trafficLightsInvalid: StateMachine = {
      off: {
        ON: "red"
      },
      red: {
        TICK: "yellow",
        OFF: "off"
      },
      yellow: {
        TICK: "green",
        OFF: "off"
      },
      green: {
        TICK: "reddd",
        ~~~~
!!! error TS2820: Type '"reddd"' is not assignable to type '"green" | "off" | "red" | "yellow"'. Did you mean '"red"'?
!!! related TS6500 quantifiedTypesSelfTypesStateMachine.ts:35:5: The expected type comes from property 'TICK' which is declared here on type '{ TICK: "green" | "off" | "red" | "yellow"; OFF: "green" | "off" | "red" | "yellow"; }'
        OFF: "off"
      }
    }